--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BJ'
 - !lcsh 'Conduct of life'
+- GITenberg
 title: 'Advice to Young Men
 
   And (Incidentally) to Young Women in the Middle and Higher Ranks of Life. In a Series
